--- a/templates/base.html
+++ b/templates/base.html
@@ -48,13 +48,15 @@
             </div>
             <div class="collapse navbar-collapse" id="responsive-navbar">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="{% url 'index' %}">首页</a></li>
+                {% block button %}
+                <li><a href="{% url 'index' %}">首页</a></li>
                 <li><a href="{% url 'getmovielist' %}">电影池</a></li>
                 <li><a href="{% url 'actor_home' %}">演员</a></li>
                 <li><a href="{% url 'director_home' %}">导演</a></li>
                 <li><a href="{% url 'company_home' %}">出品公司</a></li>
                 <li><a href="{% url 'questions' %}">找片问答区</a></li>
                 <li><a href="{% url 'webchat' %}">MovieSQL论坛</a></li>
+                {% endblock %}
             </ul>
             <form action="{% url 'searchmovie' %}" class="navbar-form navbar-left">
                 <input type="text" placeholder="电影搜索" class="form-control movie-search" name="q">
