--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,14 @@
 {% extends 'base.html'%}
-{% block title%} 首页 {% endblock %}
+{% block title %}首页{% endblock %}
+{% block button %} 
+<li class="active"><a href="{% url 'index' %}">首页</a></li>
+<li><a href="{% url 'getmovielist' %}">电影池</a></li>
+<li><a href="{% url 'actor_home' %}">演员</a></li>
+<li><a href="{% url 'director_home' %}">导演</a></li>
+<li><a href="{% url 'company_home' %}">出品公司</a></li>
+<li><a href="{% url 'questions' %}">找片问答区</a></li>
+<li><a href="{% url 'webchat' %}">MovieSQL论坛</a></li>
+{% endblock %}
 
  {% block slideshow %}
 
@@ -31,7 +40,7 @@
                 </div>
 
                 <div class="item">
-                    <img src="../static/images/01.jpg" alt="Third slide">
+                    <img src="../static/images/03.jpg" alt="Third slide">
                     <div class="carousel-caption">
                         <h2>出品公司查询</h2>
                         <p>一键获取出品方制作过的所有影片</p>
