--- a/movie/templates/movie/searchresult.html
+++ b/movie/templates/movie/searchresult.html
@@ -122,7 +122,7 @@
                                                         <span class="wpfp-span">{{movie.doubancounter}}</span>
                                                     </li>
                                                     <li class="score">
-                                                        <span class="">{{movie.doubanscore}}</span>
+                                                        <span class="">{{movie.rate}}</span>
                                                     </li>
 
                                                 </ul>
