--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,4 +1,4 @@
-//轮播图
+/*轮播图*/
 .carousel-caption{font-size:1.4rem;line-height: 2rem;}
 .carousel-caption h2{font-size: 1.6rem;padding-bottom:0.5rem;}
 .sidebar{border:1px solid #ddd;border-top:2px solid #00b7ee;color: #9fa0a0;padding: 10px;}
